# QGIS-CoastalME-Plugin

./: README.md
coastalme/: COASTALME_FM_data_provider.py  COASTALME_XS.py  COASTALME_results.py  COASTALME_results2013.py  DataTable.py  README.txt  __init__.py  __settings_variables__.txt  __utilities__.txt  bc_tables.py  coastalme_results_gpkg.py  coastalmeqgis_dialog.py  coastalmeqgis_library.py  coastalmeqgis_menu.py  coastalmeqgis_settings.py  coastalmeqgis_styles.py  compatibility_routines.py  dataset_view.py  editor_functions.py  fvbc_tide_dlg.py  fvbc_tide_provider.py  fvbc_tide_results.py  menu_provider.py  metadata.txt  nc_grid_data_provider.py  netCDF4_.py  provider.py  tmo.py
coastalme/runner/coastalme-runner/runner/: file_paths.py  main.py  progress_bar.py  pyproject.toml  queue_item.py  run_queue.py  runner_about.py  screen_text_viewer.py  settings.py  test.py  test_plotting.py  toggle_switch.py  version.py
coastalme/runner/coastalme-runner/runner/plugins/: coastalme_plots.py  coastalme_plugin.py  coastalme_plugin_item.py  coastalmefv_plugin.py  coastalmefv_plugin_item.py  plugin_base.py
coastalme/runner/coastalme-runner/runner/pyqt_compat/: __init__.py
coastalme/runner/coastalme-runner/runner/pyqt_compat/QtCore/: __init__.py
coastalme/runner/coastalme-runner/runner/pyqt_compat/QtGui/: __init__.py
coastalme/runner/coastalme-runner/runner/pyqt_compat/QtWidgets/: __init__.py
coastalme/runner/coastalme-runner/runner/util/: pandas_table_model.py
docs/: 01_plugin_overview.md  02_plugin_architecture.md  03_viewer_system.md  04_data_structures.md  (+2 more)
(+664 files in other folders)
